# XPS-AI

./: .gitignore  CONTRIBUTING.md  README.md  analyzing.py  app_requirements.txt  checkmetric.py  dataset.py  mac.py  main.py  model.pt  model.py  pyproject.toml  requirements-torch.txt  requirements.txt  run_train.py  run_train_rv.py  synth_data.py  train.py  train_lightning.py  utils.py  val_model.py  xps_to_json_mac.py
app/: analysis_window.py  app_utils.py  automatization.py  canvas.py  csv_export.py  dto.py  error_dump.py  evaluation.py  import_service.py  json_utils.py  main_window.py  nn_adapter.py  nn_service.py  optimization.py  orchestration.py  serialization.py  sidebars.py
configs/: lightning.yaml
core/: __init__.py  collection.py  core_objects.py  metadata.py  objects.py  services.py  types.py
lib/: app_services.py  domain.py  domain_services.py  funcs.py  io_utils.py  model_tools.py  optimization.py  optimization_service.py  pltviewer.py  read.py  spectra.py  tools.py
model/: analyzing.py  model_deeper.py  params.yaml
services/: core.py  dto.py  evaluation.py  optimization.py
test/: test_OptimizationManager.py  test_Peak_PeakParams.py  test_RawReader.py  test_SpectrumCollectionIO.py  test_base_models.py  test_collection.py  test_component.py  test_domain_services.py  test_model_tools.py  test_models.py  test_normalization.py  test_numerically_opt_pipeline.py  test_optimizer.py  test_peak_background.py  test_reader.py  test_region.py  test_runtime_parameter.py  test_spectrum.py  test_spectrum_collection.py  test_spectrumnregion.py
tools/: dto.py  (+15 more)
(+134 files in other folders)
