[project]
name = "ai-xps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lmfit==1.3.4",
    "numpy==2.3.2",
    "onnxruntime==1.22.1",
    "pyqtgraph==0.13.7",
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "scipy==1.16.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
interactive = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
]
