[project]
name = "ai-xps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lmfit==1.3.4",
    "numpy==2.3.2",
    "onnxruntime==1.22.1",
    "pyqtgraph==0.14.0",
    "pyside6==6.10.2",
    "pyside6-addons==6.10.2",
    "pyside6-essentials==6.10.2",
    "scipy==1.16.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "viztracer>=1.1.1",
]
interactive = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
]

[tool.pytest]
testpaths = [
    "tests",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 100
